@@ -2,6 +2,8 @@ Changes to Version 2.0-19
 
     o summary() method for "Anova.mlm" objects now returns an object, printed by a corresponding print() method (adapting code contributed by Gabriel Baud-Bovy).
 
+    o added .merMod methods to Anova(), deltaMethod(), linearHypothesis(), matchCoefs(), and unexported utilities df.residual() and has.intercept().
+
 Changes to Version 2.0-18
 
     o Bug fix to boot with type="residual"
